# Laxuv

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  readme.md  setup.sh  test.cpp
3D-fluid-simulator/: CMakeLists.txt
3D-fluid-simulator/Application/: CMakeLists.txt
3D-fluid-simulator/Application/include/: 3D-fluid-simulator.h  Window.h
3D-fluid-simulator/Application/source/: 3D-fluid-simulator.cpp  Window.cpp
3D-fluid-simulator/Application/source/shaders/: quadrilateral.vert
3D-fluid-simulator/Dependencies/imgui/src/: CMakeLists.txt
3D-fluid-simulator/Dependencies/implot/: CMakeLists.txt
3D-fluid-simulator/GraphicEngine/: CMakeLists.txt
3D-fluid-simulator/GraphicEngine/Camera/: Camera.cpp  Camera.h  Debug.cpp  Debug.h
3D-fluid-simulator/GraphicEngine/Element/: Buffer.h  Element.h  Entity.cpp  Entity.h  VertexBuffer.h
3D-fluid-simulator/GraphicEngine/Element/Line/: Line.cpp  Line.h
3D-fluid-simulator/GraphicEngine/Element/Point/: Point.cpp  Point.h
3D-fluid-simulator/GraphicEngine/Element/Shape/: Shape.cpp  Shape.h
3D-fluid-simulator/GraphicEngine/Element/Shape/Qube/: Qube.cpp  Qube.h
3D-fluid-simulator/GraphicEngine/Element/Shape/Sphere/: Sphere.cpp  Sphere.h
3D-fluid-simulator/GraphicEngine/Element/Shape/Square/: Square.cpp  Square.h
3D-fluid-simulator/GraphicEngine/Entities/: Entity.cpp  Entity.h  Object.h  Particles.h
3D-fluid-simulator/GraphicEngine/Line/: Line.cpp  Line.h
3D-fluid-simulator/GraphicEngine/Object/: Entity.cpp  Entity.h  Object.cpp  Object.h  Particles.h  Shader.cpp  VertexArray.h
3D-fluid-simulator/GraphicEngine/OpenGL_API/: Buffer.h  BufferI.h  CPUBuffer.h  GPUBuffer.h  IndexBuffer.cpp  IndexBuffer.h  Program.cpp  Program.h  ProgramDispatch.cpp  ProgramDispatch.h  Shader.cpp  Shader.h  ShaderStorageBuffer.h  Uniform.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h
3D-fluid-simulator/GraphicEngine/Particles/: Particles.cpp  Particles.h
3D-fluid-simulator/GraphicEngine/Physics/: Essentials.cpp  Essentials.h  GraphsHandler.cpp  GraphsHandler.h  HydroTest.cpp  HydroTest.h  PhysicsDispatch.cpp  PhysicsDispatch.h  PhysicsDispatch.hpp  Properties.h  Simulator.cpp  Simulator.h  data.npy  plot.py
3D-fluid-simulator/GraphicEngine/Qube/: Qube.cpp
3D-fluid-simulator/GraphicEngine/Shape/: Entity.cpp  Entity.h  Shape.h
3D-fluid-simulator/GraphicEngine/Shape/ShapeInstance/: Cube.cpp  Cube.h  Line.cpp  Line.h  Point.cpp  Point.h  ShapeInstance.h  Sphere.cpp  Sphere.h  Square.cpp  Square.h
3D-fluid-simulator/GraphicEngine/Shape/ShapeInstance/Cube/: Cube.cpp  Cube.h
3D-fluid-simulator/GraphicEngine/Shape/ShapeInstance/Line/: Line.cpp  Line.h
3D-fluid-simulator/GraphicEngine/Shape/ShapeInstance/Point/: Point.cpp  Point.h
3D-fluid-simulator/GraphicEngine/Shape/ShapeInstance/Qube/: Qube.cpp  Qube.h
3D-fluid-simulator/GraphicEngine/Shape/ShapeInstance/Sphere/: Sphere.cpp  Sphere.h
3D-fluid-simulator/GraphicEngine/Shape/ShapeInstance/Square/: Square.cpp  Square.h
3D-fluid-simulator/GraphicEngine/Sphere/: Sphere.cpp  Sphere.h
3D-fluid-simulator/GraphicEngine/Square/: Square.cpp  Square.h
3D-fluid-simulator/GraphicEngine/Sun/: Sun.cpp  Sun.h
3D-fluid-simulator/GraphicEngine/WorldAxes/: WorldAxes.cpp  WorldAxes.h
3D-fluid-simulator/GraphicEngine/include/: Buffer.h  IndexBuffer.h  Object.h  Program.h  Quadrilateral.h  Qube.h  Shader.h  Sphere.h  VertexArray.h  VertexBuffer.h  WorldAxes.h
3D-fluid-simulator/GraphicEngine/shaders/: CalculateColor.glsl  CalculateExternalForces.comp  CalculateNDC.glsl  CalculateNormal.glsl  CalculateOffset.glsl  CheckCollisions.comp  CorrectVelocity.comp  DivergenceError.comp  Element.comp  Element.frag  Element.tesc  Element.tese  Element.vert  ElementTessOff.vert  ElementTessOn.vert  EvaluateColor.glsl  FindNeighbours.comp  GetDensity.comp  Gravitation.comp  Gravitation.glsl  HydroHelperFunctions.glsl  Hydrodynamics.glsl  InitDefaultShape.glsl  InitDefaultState.comp  InitHelpers.glsl  Initialize.comp  Lines.geom  Object.frag  Object.tese  ObjectLines.geom  ObjectTriangles.geom  Points.geom  Runtime.comp  TranslateToModelCoords.comp  TranslateToWorldCoords.comp  Triangles.geom  UpdatePositions.comp  UpdateProperties.comp
3D-fluid-simulator/GraphicEngine/shaders/Object/: Object.frag  Object.vert
3D-fluid-simulator/GraphicEngine/shaders/Sphere/: Sphere.tesc  Sphere.tese
3D-fluid-simulator/GraphicEngine/source/: CMakelists.txt  Camera.cpp  IndexBuffer.cpp  Line.cpp  Object.cpp  Program.cpp  Quadrilateral.cpp  Qube.cpp  Shader.cpp  Sphere.cpp  Square.cpp  VertexArray.cpp
3D-fluid-simulator/GraphicEngine/source/shaders/: CalculateNDC.glsl  Object.tesc  Object.tese  Object.vert  Sphere.tesc  Sphere.tese  Sphere.vert  quadrilateral.frag  quadrilateral.vert
3D-fluid-simulator/PhysicsEngine/: CMakeLists.txt
3D-fluid-simulator/PhysicsEngine/source/: CMakelists.txt  Gravitation.cpp
3D-fluid-simulator/UserInterface/: CMakeLists.txt
3D-fluid-simulator/UserInterface/include/: Debug.h  Explorer.h  Interface.h  Log.h  Logger.h  Toolbar.h
3D-fluid-simulator/UserInterface/source/: CMakelists.txt  Explorer.cpp  Interface.cpp  Logger.cpp  Toolbar.cpp
3D-fluid-simulator/include/: Buffer.h  Debug.h  Explorer.h  IndexBuffer.h  Laxuv.h  Log.h  VertexArray.h  VertexBuffer.h  Window.h
3D-fluid-simulator/src/: Laxuv.cpp  Log.cpp  VertexArray.cpp  Window.cpp
Laxuv/: CMakeLists.txt  Laxuv.cpp  Laxuv.h
Laxuv/Dependencies/glew/: CMakeLists.txt
Laxuv/Dependencies/glew/src/: CMakeLists.txt
Laxuv/Dependencies/imgui/: CMakeLists.txt
Laxuv/include/: Buffer.h  Debug.h  IndexBuffer.h  Interface.h  Log.h  VertexArray.h  Window.h
Laxuv/src/: Explorer.cpp  IndexBuffer.cpp  Log.cpp  Toolbar.cpp  Window.cpp
build-wsl/: CMakeCache.txt  Makefile  cmake_install.cmake
build-wsl/3D-fluid-simulator/: Makefile  cmake_install.cmake
build-wsl/3D-fluid-simulator/Application/: 3D-fluid-simulator  Makefile  cmake_install.cmake
build-wsl/3D-fluid-simulator/GraphicEngine/: Makefile  cmake_install.cmake
build-wsl/3D-fluid-simulator/UserInterface/: Makefile  cmake_install.cmake
(+19 files in other folders)
